--- a/koha-tmpl/intranet-tmpl/prog/en/admin/marctagstructure.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/admin/marctagstructure.tmpl
@@ -122,7 +122,11 @@
         <select id="frameworkcode" name="frameworkcode">
             <option value="">Default</option>
             <!-- TMPL_LOOP NAME="frameworkloop" -->
-                <option value="<!-- TMPL_VAR NAME="value" -->" <!-- TMPL_IF NAME="selected" -->selected<!-- /TMPL_IF -->><!-- TMPL_VAR NAME="frameworktext" --></option>
+			<!-- TMPL_IF NAME="selected" -->
+                <option value="<!-- TMPL_VAR NAME="value" -->" selected="selected"><!-- TMPL_VAR NAME="frameworktext" --></option>
+				<!-- TMPL_ELSE -->
+                <option value="<!-- TMPL_VAR NAME="value" -->"><!-- TMPL_VAR NAME="frameworktext" --></option>
+				<!-- /TMPL_IF -->
             <!-- /TMPL_LOOP -->
         </select>
     </p>
