--- a/koha-tmpl/intranet-tmpl/prog/en/tools/export.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/tools/export.tmpl
@@ -29,10 +29,11 @@
             <select name="itemtype">
                 <option value="">-- All --</option>
                 <!-- TMPL_LOOP NAME="itemtypeloop" -->
-                <option value="<!-- TMPL_VAR name="value" -->"
-                    <!-- TMPL_IF name="selected" -->selected<!-- /TMPL_IF -->>
-                    <!-- TMPL_VAR name="description" -->
-                    </option>
+				<!-- TMPL_IF name="selected" -->
+                <option value="<!-- TMPL_VAR name="value" -->" selected="selected"><!-- TMPL_VAR name="description" --></option>
+<!-- TMPL_ELSE -->
+                <option value="<!-- TMPL_VAR name="value" -->"><!-- TMPL_VAR name="description" --></option>
+<!-- /TMPL_IF -->
                 <!-- /TMPL_LOOP -->
             </select>
         </p>
@@ -42,10 +43,10 @@
             <select id="branch" name="branch">
             <option value="">-- All --</option>
                 <!-- TMPL_LOOP name="branchloop" -->
-                    <option value="<!-- TMPL_VAR name="value" -->"
-                    <!-- TMPL_IF name="selected" -->selected<!-- /TMPL_IF -->>
-                        <!-- TMPL_VAR name="branchname" -->
-                    </option>
+                    <!-- TMPL_IF NAME="selected" --><option value="<!-- TMPL_VAR NAME="value" -->" selected="selected"><!-- TMPL_VAR NAME="branchname" --></option>
+				<!-- TMPL_ELSE -->
+				<option value="<!-- TMPL_VAR NAME="value" -->"><!-- TMPL_VAR NAME="branchname" --></option>
+				<!-- /TMPL_IF -->
                     <!-- /TMPL_LOOP -->
                 </select>
         </p>
