--- a/koha-tmpl/intranet-tmpl/prog/en/tools/itemslost.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/tools/itemslost.tmpl
@@ -65,7 +65,10 @@
             <select name="branchfilter">
                 <option value="">All</option>
             <!-- TMPL_LOOP name="branchloop" -->
-                <option value="<!-- TMPL_VAR name="value" -->" <!-- TMPL_IF name="selected" -->selected<!-- /TMPL_IF -->><!-- TMPL_VAR name="branchname" --></option>
+                <!-- TMPL_IF NAME="selected" --><option value="<!-- TMPL_VAR NAME="value" -->" selected="selected"><!-- TMPL_VAR NAME="branchname" --></option>
+				<!-- TMPL_ELSE -->
+				<option value="<!-- TMPL_VAR NAME="value" -->"><!-- TMPL_VAR NAME="branchname" --></option>
+				<!-- /TMPL_IF -->
             <!-- /TMPL_LOOP -->
             </select>
         </td>
@@ -73,7 +76,10 @@
             <select name="itemtypesfilter">
                 <option value="">All</option>
                 <!-- TMPL_LOOP name="itemtypeloop" -->
-                <option value="<!-- TMPL_VAR name="value" -->" <!-- TMPL_IF name="selected" -->selected<!-- /TMPL_IF -->><!-- TMPL_VAR name="description" --></option>
+                <!-- TMPL_IF NAME="selected" --><option value="<!-- TMPL_VAR NAME="value" -->" selected="selected"><!-- TMPL_VAR NAME="description" --></option>
+				<!-- TMPL_ELSE -->
+				<option value="<!-- TMPL_VAR NAME="value" -->"><!-- TMPL_VAR NAME="description" --></option>
+				<!-- /TMPL_IF -->
                 <!-- /TMPL_LOOP -->
             </select>
         </td>
